--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     </head>
     <body>
 
+        <section class="formulario">
+            <h4>Ingresa el Platillo</h4>
+            <div class="form">
+                <input type="text" id="nombrePlato" placeholder="Nombre del plato">
+                <select id="isRico">
+                    <option value="0">Escoge la opción: ¿Es Rico?</option>
+                    <option value="SI">Si</option>
+                    <option value="NO">No</option>
+                </select>
+                <input type="text" id="platFavorito" placeholder="Escribe si es favorito">
+                <button class="btn" id="sendPlatillo">Enviar datos</button>
+            </div>
+        </section>
+
         <section>
             <div class="myPlatosList" id="platos"></div>
         </section>
